<resources>
    <string name="app_name">DevIntensive</string>
    <string name="lorem_ipsun">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="project_txt">Проектов</string>
    <string name="code_line_txt">Написано строк кода</string>
    <string name="rating_txt">Рейтинг</string>
    <string name="txt_5">5</string>
    <string name="my_profile_txt">Мой профиль</string>
    <string name="my_group_txt">Команда</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
</resources>
