<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_larger_112"
            android:background="@color/grey"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/user_info.hint"
                    android:text="@string/txt_5"/>

                <TextView
                    style="@style/user_info.value"
                    android:text="@string/rating_txt"/>
            </LinearLayout>

            <View
                android:layout_width="@dimen/line_size_2"
                android:layout_height="@dimen/size_large_80"
                android:layout_gravity="center"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/user_info.hint"
                    android:text="@string/txt_5"/>

                <TextView
                    style="@style/user_info.value"
                    android:text="@string/code_line_txt"/>

            </LinearLayout>

            <View
                android:layout_width="@dimen/line_size_2"
                android:layout_height="@dimen/size_large_80"
                android:layout_gravity="center"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/user_info.hint"
                    android:text="@string/txt_5"/>

                <TextView
                    style="@style/user_info.value"
                    android:text="@string/project_txt"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/user_image_left"
                android:src="@drawable/ic_phone_black_24dp"/>

            <LinearLayout
                style="@style/user_edit_layout">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/edit_text"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="Мобильный"
                        android:inputType="phone"
                        android:text="+3(8096) 389-03-26"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <ImageView
                android:id="@+id/call_img"
                style="@style/user_image_right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_2"
            android:layout_marginLeft="@dimen/size_large_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/user_image_left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                style="@style/user_edit_layout">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_et"
                        style="@style/edit_text"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="E-mail"
                        android:inputType="textEmailAddress"
                        android:text="avtokot84@gmail.com"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/email_img"
                style="@style/user_image_right"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_2"
            android:layout_marginLeft="@dimen/size_large_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/user_image_left"
                android:src="@drawable/ic_vk_social_logo_24dp"/>

            <LinearLayout
                style="@style/user_edit_layout">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vk_et"
                        style="@style/edit_text"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="Профиль в Vk"
                        android:inputType="textEmailAddress"
                        android:text="vk.com/id234015046"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/vk_img"
                style="@style/user_image_right"
                android:src="@drawable/ic_eye_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_2"
            android:layout_marginLeft="@dimen/size_large_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/user_image_left"
                android:src="@drawable/ic_github_logo_black_shape_24dp"/>

            <LinearLayout
                style="@style/user_edit_layout">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/git_et"
                        style="@style/edit_text"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="Репозиторий"
                        android:inputType="textEmailAddress"
                        android:text="github.com"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <ImageView
                android:id="@+id/git_img"
                style="@style/user_image_right"
                android:src="@drawable/ic_eye_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_2"
            android:layout_marginLeft="@dimen/size_large_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/user_image_left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_weight="1"

                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/account_et"
                        style="@style/edit_text"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="О себе"
                        android:text="@string/lorem_ipsun"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
