<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:id="@+id/scroll"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_larger_120"
            android:background="@color/grey"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_txt_25"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rating_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_txt_15"/>
            </LinearLayout>

            <View
                android:layout_width="@dimen/line_size_2"
                android:layout_height="@dimen/size_large_80"
                android:layout_gravity="center"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_txt_25"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/code_line_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_txt_15"/>

            </LinearLayout>

            <View
                android:layout_width="@dimen/line_size_2"
                android:layout_height="@dimen/size_large_80"
                android:layout_gravity="center"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txt_5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_txt_25"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/project_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_txt_15"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginLeft="@dimen/size_small_24"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_phone_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="Мобильный"
                        android:inputType="phone"
                        android:text="34354635743624"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_2"
            android:layout_marginLeft="@dimen/size_large_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginLeft="@dimen/size_small_24"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="E-mail"
                        android:inputType="textEmailAddress"
                        android:text="myMail"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_send_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_2"
            android:layout_marginLeft="@dimen/size_large_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginLeft="@dimen/size_small_24"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_vk_social_logo_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vk_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="Профиль в Vk"
                        android:inputType="textEmailAddress"
                        android:text="vk.com"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_eye_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_2"
            android:layout_marginLeft="@dimen/size_large_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginLeft="@dimen/size_small_24"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_github_logo_black_shape_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/git_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="Репозиторий"
                        android:inputType="textEmailAddress"
                        android:text="github.com/school"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_eye_24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginLeft="@dimen/spacing_larger_80"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="Репозиторий"
                        android:inputType="textEmailAddress"
                        android:text="github.com/school"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_eye_24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_large_72"
                android:layout_marginLeft="@dimen/spacing_larger_80"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="Репозиторий"
                        android:inputType="textEmailAddress"
                        android:text="github.com/school"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_eye_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_2"
            android:layout_marginLeft="@dimen/size_large_72"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/size_small_24"
                android:layout_height="@dimen/size_small_24"
                android:layout_marginLeft="@dimen/size_small_24"
                android:layout_marginTop="@dimen/size_small_24"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_weight="1"

                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/account_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="О себе"
                        android:text="@string/lorem_ipsun"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>